objects/Action__c.object
<CustomObject>
    <description>Actions are used within Initiatives to help track progress.</description>
    <fields>
        <fullName>Blocked_reason__c</fullName>
        <label>Blocked reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Related_to_Initiative__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related to Initiative</label>
        <referenceTo>Sales_Ops_Initiatives__c</referenceTo>
        <relationshipLabel>Actions</relationshipLabel>
        <relationshipName>Actions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not started</fullName>
                </value>
                <value>
                    <fullName>In progress</fullName>
                </value>
                <value>
                    <fullName>Blocked</fullName>
                </value>
                <value>
                    <fullName>In testing</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Action</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>My_Actions</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Description__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Related_to_Initiative__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Actions</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_Open_SO_Actions</fullName>
        <columns>Related_to_Initiative__c</columns>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Description__c</columns>
        <columns>End_Date__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Completed,Cancelled</value>
        </filters>
        <label>My Open SO Actions</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Action Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Actions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Required_Block_Reason</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
ISPICKVAL(Status__c, &quot;Blocked&quot;),
 ISBLANK(Blocked_reason__c))</errorConditionFormula>
        <errorDisplayField>Blocked_reason__c</errorDisplayField>
        <errorMessage>A Blocked reason is required when a status of &quot;Blocked&quot; is selected.</errorMessage>
    </validationRules>
</CustomObject>